# lxmax

./: .gitignore  CMakeLists.txt  Folder.DotSettings  LICENSE.md  README.md  package-info.json.in
.github/workflows/: build.yml
docs/: lx.config.xml  lx.dmx.read.xml  lx.dmx.write.xml
extras/: LXMax DMX Setup.maxpat
help/: lx.config.maxhelp  lx.config.ui.maxhelp
misc/: lx_gtdf_parameter_definitions.json
source/: CMakeLists.txt
source/lxmax/: CMakeLists.txt  lx_common_syms.c  lx_common_syms.h  lx_version.h.in  version.h
source/lxmax/liblxmax/: CMakeLists.txt
source/lxmax/liblxmax/include/: common.h  dmx.h  lx_common.h  lx_dmx.h  lx_helpers.h  lx_net.h  lx_parameter.h  lx_serial.h  lx_service.h  lx_universe_config.h  lxmax.h  net.h  service.h  universe_config.h
source/lxmax/liblxmax/src/: common.c  dmx.cpp  lx_common.c  lx_dmx.c  lx_helpers.cpp  lx_net.c  lx_net_macos.c  lx_net_win.c  lx_parameter.c  lx_serial.c  lx_serial_macos.cpp  lx_serial_win.c  lx_service.c  lx_universe_config.c  main.c  net.cpp  service.c  universe_config.c
source/lxmax/lx.config/: CMakeLists.txt  lx.config.c
source/lxmax/lx.config.ui/: CMakeLists.txt  lx.config.ui.c
source/lxmax/lx.dmx.read/: CMakeLists.txt  lx.dmx.read.c
source/lxmax/lx.dmx.write/: CMakeLists.txt  lx.dmx.write.c
source/lxmax/lxmax/: CMakeLists.txt  lx.service.cpp
source/lxmax/lxmax/internals/: dmx_buffer.cpp  dmx_buffer.hpp  dmx_io_protocol.cpp  dmx_io_protocol.hpp  dmx_io_service.cpp  dmx_io_service.hpp  udp_socket_service.cpp  udp_socket_service.hpp
source/lxmax/lxmax/internals/packets/: dmx_packet_artnet.hpp  dmx_packet_sacn.hpp  endian_ints.hpp
source/lxmax/lxmax/internals/protocols/: dmx_artnet_io_protocol.cpp  dmx_artnet_io_protocol.hpp  dmx_sacn_io_protocol.cpp  dmx_sacn_io_protocol.hpp
